--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <!-- css -->
         <link rel="stylesheet" href="Components/Assets/bootstrap-5.1.3-dist/css/bootstrap.min.css">
         <link rel="stylesheet" href="Components/Scss/style.css">
+        <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     </head>
 
     <body>
@@ -28,16 +29,16 @@
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Services</a>
+                            <a class="nav-link" href="#">Services / Skills</a>
                         </li>
 
                         <li class="nav-item">
                             <a class="nav-link" href="#">About</a>
                         </li>
 
-                        <li class="nav-item">
+                        <!-- <li class="nav-item">
                             <a class="nav-link" href="#">Skills</a>
-                        </li>
+                        </li> -->
 
                         <li class="nav-item">
                             <a class="nav-link" href="#">Portfolio</a>
@@ -58,7 +59,7 @@
                     <!-- hero text -->
                     <div class="hero_text">
                         <h1 class="text-white">
-                            Hello,I'm <br> a Front end Developer.
+                            Hello, I'm <br> a Front end Developer.
                         </h1>
 
                         <p class="mt-3 text-muted">
@@ -67,7 +68,7 @@
 
                         <div class="mt-3">
                             <a href="" class="btn btn-danger">
-                                Creator journey
+                                My Portfolio
                             </a>
                         </div>
                     </div>
@@ -79,7 +80,7 @@
         <main>
             <!-- services -->
             <section class="services">
-                <div class="container">
+                <div class="container" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="50" data-aos-offset="200">
                     <h6 class="text-white">Services</h6>
                     <h1 class="text-danger">Skill-Set</h1>
 
@@ -220,10 +221,65 @@
                     </div>
                 </div>
             </section>
+
+            <!-- about -->
+            <section class="about">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-6" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="50" data-aos-offset="200">
+                            <div class="text-center">
+                                <img src="Components/Assets/Images/undraw_creation_process_re_kqa9.svg" width="80%" alt="svg illustration">
+                            </div>
+                        </div>
+
+                        <div class="col-md-6" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100" data-aos-offset="200">
+                            <div class="d-flex align-items-center h-100">
+                                <div class="content">
+                                    <h6 class="text-white">About Me</h6>
+                                    <h1 class="text-danger">Hi There</h1>
+
+                                    <p class="mt-3 text-muted">
+                                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quo sit nulla optio officiis dolorum. Rerum autem harum, beatae fuga corrupti libero aperiam fugiat voluptatum. Eaque cupiditate ipsa minima modi. Beatae?
+                                    </p>
+
+                                    <div class="mt-3">
+                                        <a href="" class="btn btn-danger">
+                                            <i class="fa-solid fa-download me-2"></i> Resume
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <!-- contact -->
+            <section class="contact">
+                <div class="container text-center" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="50" data-aos-offset="200">
+                    <h6 class="text-white">Contact</h6>
+                    <h1 class="text-danger">Connect With Me</h1>
+
+                    <p class="mt-3 text-muted">
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. <br> Facere, voluptates. Est dolor saepe esse modi, autem ducimus necessitatibus <br> pariatur ab repellat tempora quis cum, aspernatur, atque repudiandae <br> voluptatum magni nemo?
+                    </p>
+
+                    <div class="mt-3 text-center d-flex justify-content-center">
+                        <a href="mailto: nath.codes@gmail.com" class="btn btn-danger">
+                            Say Hello
+                        </a>
+                    </div>
+                </div>
+            </section>
         </main>
 
         <!-- script -->
         <script src="Components/Assets/bootstrap-5.1.3-dist/js/bootstrap.min.js"></script>
         <script src="https://kit.fontawesome.com/5e1eeba24b.js" crossorigin="anonymous"></script>
+        <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
+        <script>
+            AOS.init();
+        </script>
     </body>
 </html>
