--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <a class="navbar-brand" href="#">Nathan<span>iel</span></a>
 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
+                    <i class="fa-solid fa-bars text-white"></i>
                 </button>
 
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
