--- a/index.html
+++ b/index.html
@@ -10,9 +10,19 @@
         <link rel="stylesheet" href="Components/Assets/bootstrap-5.1.3-dist/css/bootstrap.min.css">
         <link rel="stylesheet" href="Components/Scss/style.css">
         <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+        <link rel="stylesheet" href="Components/Scss/preloader.css">
     </head>
 
     <body>
+        <!-- preloader -->
+        <div class="building-blocks">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+
         <!-- navbar -->
         <nav class="fixed-top navbar navbar-expand-lg pt-3 pb-3 navbar-dark">
             <div class="container">
@@ -485,6 +495,7 @@
         <script src="Components/Assets/bootstrap-5.1.3-dist/js/bootstrap.min.js"></script>
         <script src="https://kit.fontawesome.com/5e1eeba24b.js" crossorigin="anonymous"></script>
         <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+        <script src="app.js"></script>
 
         <script>
             AOS.init();
