--- a/index.html
+++ b/index.html
@@ -23,6 +23,33 @@
             <div></div>
         </div>
 
+        <!-- social links -->
+        <div class="d-flex socail_block flex-column gap-3 bg-danger p-3 pt-4 pb-4 position-fixed start-0 justify-content-center align-items-center" id="socialBlock">
+            <div class="social_link">
+                <a href="" class="text-white">
+                    <i class="fab fa-twitter fs-5"></i>
+                </a>
+            </div>
+
+            <div class="social_link">
+                <a href="" class="text-white">
+                    <i class="fab fa-instagram fs-5"></i>
+                </a>
+            </div>
+
+            <div class="social_link">
+                <a href="" class="text-white">
+                    <i class="fab fa-github fs-5"></i>
+                </a>
+            </div>
+
+            <div class="social_link">
+                <a href="" class="text-white">
+                    <i class="fab fa-linkedin-in fs-5"></i>
+                </a>
+            </div>
+        </div>
+
         <!-- navbar -->
         <nav class="fixed-top navbar navbar-expand-lg pt-3 pb-3 navbar-dark">
             <div class="container">
@@ -485,6 +512,24 @@
                     <div class="mt-3 text-center d-flex justify-content-center">
                         <a href="mailto: nath.codes@gmail.com" class="btn btn-danger">
                             Say Hello
+                        </a>
+                    </div>
+
+                    <div class="mt-4 d-flex mobile_social_links gap-4 justify-content-center">
+                        <a href="" class="text-white">
+                            <i class="fab fa-github fs-4"></i>
+                        </a>
+
+                        <a href="" class="text-white">
+                            <i class="fab fa-twitter fs-4"></i>
+                        </a>
+
+                        <a href="" class="text-white">
+                            <i class="fab fa-instagram fs-4"></i>
+                        </a>
+
+                        <a href="" class="text-white">
+                            <i class="fab fa-linkedin-in fs-4"></i>
                         </a>
                     </div>
                 </div>
