project mid stage - Working on portfolio and about

--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
     </head>
 
     <body>
+        <!-- scroll to top button -->
+        <a href="#" id="scrollTop" class="text-decoration-none scroll_to_top position-fixed bottom-0 end-0 mb-3 me-3">
+            <button class="btn btn-danger">
+                <i class="fas fa-arrow-up"></i>
+            </button>
+        </a>
+
         <!-- preloader -->
         <div class="building-blocks">
             <div></div>
@@ -277,10 +284,10 @@
                                     <h1 class="text-danger">Hi There</h1>
 
                                     <p class="mt-3 text-muted">
-                                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quo sit nulla optio officiis dolorum. Rerum autem harum, beatae fuga corrupti libero aperiam fugiat voluptatum. Eaque cupiditate ipsa minima modi. Beatae?
+                                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quo sit nulla optio officiis dolorum. Rerum autem harum, beatae fuga corrupti libero aperiam fugiat voluptatum. Eaque cupiditate ipsa minima modi. Beatae? <a href="" class="text-danger text-decoration-underline fw-bold">Learn more about me.</a>
                                     </p>
 
-                                    <div class="mt-3">
+                                    <div class="mt-4">
                                         <a href="" class="btn btn-danger">
                                             <i class="fa-solid fa-download me-2"></i> Resume
                                         </a>
